Pint Changelog
==============

0.26 (unreleased)
-----------------
Nothing changed yet.


0.25.1 (2025-11-06)
-------------------

- Revert typing change in `pint.Unit`


0.25.1 (2025-11-01)
-------------------

- Fix raising exception in `Quantity.from_tuple` with invalid units (#2199)
- Several unit definition fixes.
- Add devcontainer.json to add GitHub Codespace support (#2208)
- Add support for `numpy.geomspace` (#2206)
- Add support for `linalg.diagonal`, `linalg.matrix_transpose`, `diag`, `tril`, `triu`, `linalg.eigvals`, `linalg.eigvalsh`, `linalg.matrix_norm` and `linalg.vector_norm` (#2210)
- An example of performing currency conversions that change over time has been added to the docs. (#2240)
- Add support for `pint.Quantity` being used as Generic. (#2231)
- Add a typing and IDE autocomplete page to the documentation. (#2243)
- Fixed `nan`/`nan` to return `nan` rather than 1 in unit conversion (#2228)


0.25.0 (2025-08-25)
-------------------

- Bump minimum Python version to 3.11.
- Upgrade code to Python 3.11.
- Move to pixi/uv/ruff.
- Refactor compat to make it easier to test.
- Implemented several pixi environment and tasks to simplify development.
- Add docs to the functions in ``pint.testing`` (PR #2070)
- Fix round function returning float instead of int (#2081)
- Fix return type of `PlainQuantity.to` (#2088)
- Update constants to CODATA 2022 recommended values. (#2049)
- Fixed issue with `.to_compact` and Magnitudes with uncertainties / Quantities with units (PR #2069, issue #2044)
- Fixed issue in unit conversion which led to loss of precision when using `decimal`. (#2107)
- Add conductivity dimension. (#2112)
- Add absorbance unit and dimension. (#2114)
- Add membrane filtration flux and permeability dimensionality, and shorthand "LMH". (#2116)
- Fix find_shortest_path to use breadth first search (#2146)
- Fix typo in ``pyproject.toml``: rename ``AS_MIP`` to ``HAS_MIP`` so that MIP support is correctly detected. (#2152)